assets/src/scss/5-pages/_api.scss
$api-box-padding-x: $font-size-base;
$api-box-padding-y: ceil($font-size-base / 2);

.api-content {

    ul {
        @include rem(padding-left, 30px);
        list-style-type: none;

        li {
            margin-bottom: 1rem;
        }

        li:before {
            color: $eshill-green;
            content: "■";
            margin-right: 4pt;
        }
    }

    a.tool-link {
        float: right;
        color: #ddd;
        @include rem(margin, 0 8px);
    }


    .icon-hash:before {
        content: '#';
        @include rem(font-size, 32px);
        font-weight: bold;
        /*top: -10px;*/
        line-height: 0.5;
    }

    .tool-link:hover {
        color: #bbb;
        text-decoration: none;
    }


    // old Yii 1.1 and 1.0 API docs
    .api1 {
        pre {
            @extend .content;
            @extend pre;
            @extend code;
            word-break: break-all;
        }

        div.code {
          @extend .content;
          @extend pre;
          @extend code;

            display: none;
        }

        table.summaryTable {
            @extend .table;
            @extend .table-bordered;
            @extend .table-striped;

            width: 100%;
            @include rem(margin, 18px 0);
        }

        table.docClass {
            th {
                width: 25%;
            }
        }

        .detailHeader {
            font-weight: bold;
            @include rem(font-size, 24px);
            @include rem(margin, 30px 0 5px 0);
            border-bottom: 1px solid #ddd;
        }

        .detailHeaderTag {
            font-weight: normal;
            @include rem(font-size, 20px);
        }

        .paramNameCol {
          width: 12%;
          font-weight: bold;
        }

        .paramTypeCol {
          width: 12%;
        }

        .sourceCode {
            @include rem(margin, 5px 0);
            @include rem(padding, 5px);
            background: #f9f9f9;
            white-space: normal;

            a.show {
                display: inline !important;
            }
        }

        #nav {
            @include rem(padding, 3px);
            @include rem(margin, 0 0 10px 0);
            border-top: 1px #ddd solid;
        }

        #classDescription {
            @extend .content;
            @extend p;
        }
    }

    .signature, td.signature, td .signature2 {
        margin: 1em 0;
        padding: $api-box-padding-y $api-box-padding-x;

        color: #000000;
        background: #f9f9f9;

        border-top: 1px solid #ddd;
        border-bottom: 1px solid #ddd;

        font-family: $font-family-monospace;
//      white-space: pre-line;
        word-wrap: break-word;
        word-break: break-all;
    }
    td .signature2 {
        margin: 0;
        border: none;
        padding: 0;
    }

    .property-doc .signature {
        border-left: solid 1px #ddd;
        border-right: solid 1px #ddd;
        margin: 0;
    }

    .detail-header {
        font-size: floor($font-size-base * 1.5);
        @include rem(margin, 30px 0 0 0);
        border-left: solid 1px #ddd;
        border-right: solid 1px #ddd;
        padding: $api-box-padding-y $api-box-padding-x;
    }

    .doc-description {
        border-left: solid 1px #ddd;
        border-right: solid 1px #ddd;
        padding: $api-box-padding-y $api-box-padding-x;
        margin: 0;
    }
    .doc-description.deprecated {
        background: lightpink;
        border-top: solid 1px #ddd;
        border-bottom: solid 1px #ddd;
    }

    .event-doc .doc-description {
        border-bottom: solid 1px #ddd;
    }

    table {
        display: block;
        overflow-x: auto;
        -webkit-overflow-scrolling: touch;
        border: none !important;
        tbody > tr > td,
        tbody > tr > th {
            padding-left: $api-box-padding-x;
        }
    }

    table td p:last-child,
    .doc-description p:last-child {
        margin-bottom: 0;
    }


    .signature-defs {
        color: #936;
    }

    .signature-type, .signature-type a {
        color: #693;
    }


    table.detail-table .param-name-col { width: 15%; min-width: 10em; }
    table.detail-table .param-type-col { width: 20%; min-width: 12em; }
    table.detail-table .param-desc-col { width: 65%; }

    table.summary-table .col-method   { width: 20%; }
    table.summary-table .col-property { width: 20%; }
    table.summary-table .col-const    { width: 20%; }
    table.summary-table .col-event    { width: 20%; }
    table.summary-table .col-defined  { width: 15%; }

    .top-nav {
        @include rem(padding, 3px);
        @include rem(margin, 0 0 10px 0);
        border-top: 1px #ddd solid;
    }

}
#api-navigation {
  @extend %sidenav;
  > a.has-children {
    text-transform: none;
  }
  .api-ns-level-0 {
    color: $eshill-green;
  }
  .api-ns-level-1 {
    color: #247BA0;
  }
  .api-ns-level-2 {
    color: $eshill-blue;
  }
}

